# voice-pipeline

./: .gitignore  CLAUDE.md  COST_TRACKING.md  INTERVIEW_GUIDE.md  README.md  pyproject.toml
scripts/: voice-route.sh
tests/: test_routing.py
voice_pipeline/: __init__.py  __main__.py  main.py  process.py  route.py
voice_pipeline/prompts/: router.md
