[project]
name = "voice-pipeline"
version = "0.1.0"
description = "Voice capture and auto-routing pipeline: speak → transcribe → classify → route"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.34.0"]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
